# mini-vit

./: .gitignore  README.md  main.py  pyproject.toml
src/data/: cifar_data.py
src/mini_vit/api/: data_api.py  train_api.py
src/mini_vit/data/: __init__.py  cifar_data.py  utils.py
src/mini_vit/model/: __init__.py  components.py
src/mini_vit/train/: __init__.py  train.py
tests/: test_data.py
tests/model/: test_components.py
